<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>limpopo-sampletab</artifactId>
	<version>1.1.9-SNAPSHOT</version>
	<name>Limpopo SampleTab</name>
	<description>Limopop parser extension for SampleTab file format</description>
	<groupId>uk.ac.ebi.arrayexpress2</groupId>
	<scm>
		<url>http://limpopo.svn.sourceforge.net/viewvc/limpopo</url>
		<connection>scm:svn:https://limpopo.svn.sourceforge.net/svnroot/limpopo</connection>
		<developerConnection>scm:svn:https://limpopo.svn.sourceforge.net/svnroot/limpopo</developerConnection>
	</scm>
	<url>http://limpopo.sourceforge.net</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
		<maven.compile.encoding>UTF-8</maven.compile.encoding>
	</properties>	
	
	<repositories>
		<repository>
			<id>ebi-repo</id>
			<name>EBI repo</name>
			<url>http://www.ebi.ac.uk/~maven/m2repo</url>
		</repository>
		<repository>
			<id>hasbanana-repo</id>
			<url>http://www.hasbanana.com/maven/repo</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
		<!-- Use the coconut repository for now as hasbanana is down -->    
		<repository>
	        <id>coconut.ebi.ac.uk</id>
	        <name>coconut.ebi.ac.uk-releases</name>
	        <url>http://coconut.ebi.ac.uk:8081/artifactory/local-repo</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
	    </repository>
		<repository>
			<id>erroritem-repo</id>
			<name>ErrorItem Mini-SF Repository</name>
			<url>http://erroritem.sourceforge.net/maven/repo</url>
		</repository>
		<repository>
			<id>limpopo-repo</id>
			<name>Limpopo Mini-SF Repository</name>
			<url>http://limpopo.sourceforge.net/maven/repo</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>uk.ac.ebi.arrayexpress2</groupId>
			<artifactId>limpopo</artifactId>
			<version>1.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.mged.magetab</groupId>
			<artifactId>erroritem</artifactId>
			<version>1.0</version>
			<exclusions>
				<exclusion>
					<groupId>commons-logging</groupId>
					<artifactId>commons-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- testing -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.6.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.14</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-project-info-reports-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>jxr-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</reporting>

	<licenses>
		<license>
			<name>GNU Lesser General Public License</name>
			<url>http://www.gnu.org/copyleft/lesser.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<!-- Maven repository deploy -->
    <distributionManagement>
        <repository>
            <id>limpopo-repo</id>
            <name>Limpopo Mini-SF Repository</name>
            <url>scp://shell.sourceforge.net/home/project-web/limpopo/htdocs/maven/repo</url>
        </repository>
        <snapshotRepository>
            <id>coconut.ebi.ac.uk-snapshots</id>
            <name>coconut.ebi.ac.uk-snapshots</name>
            <url>http://coconut.ebi.ac.uk:8081/artifactory/local-repo</url>
        </snapshotRepository>
        <site>
            <id>limpopo.sf.net</id>
            <url>scp://shell.sourceforge.net/home/project-web/limpopo/htdocs/sampletab</url>
        </site>
    </distributionManagement>

	<developers>
		<developer>
			<id>faulcon</id>
			<name>Adam Faulconbridge</name>
			<email>faulcon@ebi.ac.uk</email>
			<organization>EBI</organization>
			<organizationUrl>http://www.ebi.ac.uk</organizationUrl>
			<roles>
				<role>Developer</role>
			</roles>
			<timezone>0</timezone>
			<properties />
		</developer>
	</developers>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<fork>true</fork>
					<source>1.5</source>
					<target>1.5</target>  <!-- may need to be 1.7 eventually -->
					<encoding>utf-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>attached</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			
      <plugin>
	      <groupId>org.apache.maven.plugins</groupId>
	      <artifactId>maven-surefire-plugin</artifactId>
	      <version>2.14</version>
	      <configuration>
					<argLine>-Dfile.encoding=UTF-8 -Xms512m -Xmx2G -XX:PermSize=128m -XX:MaxPermSize=1G</argLine>					      
	      </configuration>
      </plugin>
      			
		</plugins>
        <extensions>
            <!-- Enabling the use of SCP -->
            <extension>
                <groupId>org.apache.maven.wagon</groupId>
                <artifactId>wagon-ssh</artifactId>
                <version>2.2</version>
            </extension>
        </extensions>
    </build>
</project>
